[package]
name = "ssb-validate2-rsjs-node"
version = "0.2.0"
authors = ["Andrew Reid <glyph@mycelial.technology>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
node-bindgen = "4.0"
ssb-legacy-msg-data = { git = "https://github.com/sunrise-choir/legacy-msg-data" }
ssb-validate = { git = "https://github.com/sunrise-choir/ssb-validate" }
# update to ssb-verify-signatures = "1.0.1" when crates.io has latest
ssb-verify-signatures = { git = "https://github.com/sunrise-choir/ssb-verify-signatures" }

[build-dependencies]
node-bindgen = { version = "4.0", features = ["build"] }
