[package]
name = "ssb-validate2-rsjs-node"
version = "0.4.0"
authors = ["Andrew Reid <glyph@mycelial.technology>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
node-bindgen = "4.0"
ssb-crypto = "0.2.2"
ssb-validate = "1.4.0"
ssb-verify-signatures = "1.1.0"

[build-dependencies]
node-bindgen = { version = "4.0", features = ["build"] }
